--- a/app/src/main/res/layout/auto_main.xml
+++ b/app/src/main/res/layout/auto_main.xml
@@ -329,7 +329,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
-        android:onClick="goBack"
+        android:onClick="goBackToScore"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
