--- a/app/src/main/res/layout/backdrop_main.xml
+++ b/app/src/main/res/layout/backdrop_main.xml
@@ -3,6 +3,6 @@
     android:id="@+id/backdrop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray">
+    android:background="@color/backdropgray">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
