--- a/app/src/main/res/layout/teleop_main.xml
+++ b/app/src/main/res/layout/teleop_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/raleway_medium"
-        android:text="Backdrop Pixels:"
+        android:text="Tele-Op Backdrop Pixels:"
         android:textColor="@color/white"
         android:textSize="22dp"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
         android:layout_height="32dp"
         android:layout_marginTop="160dp"
         android:fontFamily="@font/raleway_medium"
-        android:text="Backstage Pixels:"
+        android:text="Tele-Op Backstage Pixels:"
         android:textColor="@color/white"
         android:textSize="22dp"
         android:textStyle="bold"
@@ -555,7 +555,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
-        android:onClick="goBackToScore"
+        android:onClick="goBackToAuto"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
@@ -563,12 +563,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/nextpage"
+        android:id="@+id/nextpagetoendgame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
-        android:onClick="nextPage"
+        android:onClick="nextPageToEndgame"
         android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
