--- a/app/src/main/res/layout/auto_main.xml
+++ b/app/src/main/res/layout/auto_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray">
+
 
     <TextView
         android:id="@+id/teamelement"
@@ -27,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -46,7 +48,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="572dp"
         android:fontFamily="@font/raleway_medium"
-        android:text="Extra Backdrop Pixels:"
+        android:text="White Backdrop Pixels:"
         android:textColor="@color/white"
         android:textSize="22dp"
         android:textStyle="bold"
@@ -168,7 +170,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="688dp"
         android:fontFamily="@font/raleway_medium"
-        android:text="Backstage Pixels:"
+        android:text="White Backstage Pixels:"
         android:textColor="@color/white"
         android:textSize="22dp"
         android:textStyle="bold"
@@ -197,7 +199,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -229,7 +231,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -247,7 +249,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -265,7 +267,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -283,7 +285,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -296,7 +298,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/redtotalscore"
+        android:id="@+id/redtotalscoreauto"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="796dp"
@@ -312,12 +314,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/next"
+        android:id="@+id/nextpagetoteleop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
         android:text="Next"
+        android:onClick="nextPageToTeleop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
         app:layout_constraintStart_toStartOf="parent"
@@ -337,7 +340,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluetotalscore"
+        android:id="@+id/bluetotalscoreauto"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="796dp"
@@ -372,7 +375,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="344dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -390,7 +393,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="384dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -408,7 +411,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="344dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -426,7 +429,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="384dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -458,7 +461,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="488dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -476,7 +479,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="488dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -494,7 +497,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="528dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -512,7 +515,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="528dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -530,7 +533,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 1   "
         android:textColor="@color/red"
         android:textSize="18dp"
@@ -548,7 +551,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:fontFamily="@font/raleway_medium"
-        android:onClick="calculateScore"
+        android:onClick="calculateScoreAuto"
         android:text="Robot 2   "
         android:textColor="@color/blue"
         android:textSize="18dp"
@@ -655,6 +658,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/minus_icon" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
