--- a/app/src/main/res/layout/endgame_main.xml
+++ b/app/src/main/res/layout/endgame_main.xml
@@ -556,12 +556,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/finish"
+        android:id="@+id/nextpagetototalscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
         android:text="Finish"
+        android:onClick="nextPageToTotalScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
         app:layout_constraintStart_toStartOf="parent"
@@ -573,7 +574,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="800dp"
         android:backgroundTint="@color/blue"
-        android:onClick="goBackToScore"
+        android:onClick="goBackToTeleOp"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
